--- a/.github/workflows/Azerothcore-Linux_x64.yml
+++ b/.github/workflows/Azerothcore-Linux_x64.yml
@@ -1,7 +1,9 @@
 name: Azerothcore-Linux_x64
 on:
   workflow_dispatch:
-
+  schedule:
+    - cron: 0 19 * * *
+    
 jobs:
   build:
     runs-on: ubuntu-22.04
