--- a/.github/workflows/Azerothcore-Linux_x64.yml
+++ b/.github/workflows/Azerothcore-Linux_x64.yml
@@ -34,7 +34,7 @@ jobs:
       - name: 生成时间
         id: ts
         run: |
-          echo "utc=$(date -u +%Y%m%d)" >> $GITHUB_OUTPUT
+          echo "utc=$(date -u +%Y%m%d%h%m%s)" >> $GITHUB_OUTPUT
           
       - name: 克隆仓库
         run: |
