--- a/.github/workflows/test-win_X64.yml
+++ b/.github/workflows/test-win_X64.yml
@@ -6,15 +6,15 @@ on:
       repo:
         description: 'AzerothCore repository URL'
         required: true
-        default: 'liyunfan1223/azerothcore-wotlk'
+        default: 'azerothcore/azerothcore-wotlk'
       branch:
         description: 'Branch'
         required: true
-        default: 'Playerbot'
+        default: 'master'
       modules:
         description: 'Modules (separated by |)'
         required: false
-        default: 'https://github.com/liyunfan1223/mod-playerbots.git|https://github.com/azerothcore/mod-eluna.git|https://github.com/azerothcore/mod-learn-spells.git|https://github.com/azerothcore/mod-autobalance.git|https://github.com/azerothcore/mod-auto-revive.git'
+        default: ''
   
   schedule:
     - cron: 0 19 * * *
