--- a/.github/workflows/test-win_X64.yml
+++ b/.github/workflows/test-win_X64.yml
@@ -94,7 +94,7 @@ jobs:
             -MYSQL_EXECUTABLE:FILEPATH=C:/Program Files/MySQL/MySQL Server 8.0/bin/mysql.exe `
             -MYSQL_INCLUDE_DIR:PATH=C:/Program Files/MySQL/MySQL Server 8.0/include `
             -MYSQL_LIBRARY:FILEPATH=C:/Program Files/MySQL/MySQL Server 8.0/lib/libmysql.lib `
-            -OPENSSL_INCLUDE_DIR:PATH=C:/Program Files/OpenSSL-Win64/include `
+            # -OPENSSL_INCLUDE_DIR:PATH=C:/Program Files/OpenSSL-Win64/include `
         shell: pwsh
 
       - name: Setup MSBuild
