--- a/.github/workflows/Build_Database.yml
+++ b/.github/workflows/Build_Database.yml
@@ -51,25 +51,25 @@ jobs:
       - name: 复制文件打包
         id: package
         run: |
-          mkdir -p /home/runner/Release
+          mkdir -p /home/runner/Release/Azerothcore
           mkdir -p /home/runner/Release/Playerbots
-          cp -r "${{ env.ROOT_DIR }}"/data/* /home/runner/Release/
+          cp -r "${{ env.ROOT_DIR }}"/data/* /home/runner/Release/Azerothcore
           cp -r "${{ env.ROOT_DIR }}"/modules/mod-playerbots/data/* /home/runner/Release/Playerbots
-          tar -czvf "acore-${{ steps.ts.outputs.utc }}.tar.gz" -C /home/runner Release
-          echo "name=acore-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
+          tar -czvf "Database-${{ steps.ts.outputs.utc }}.tar.gz" -C /home/runner Release
+          echo "name=Database-${{ steps.ts.outputs.utc }}.tar.gz" >> $GITHUB_OUTPUT
           
-      - name: 创建Release并上传资产
+      - name: 创建上传Release
         uses: ncipollo/release-action@v1
         with:
-         tag: "Azerothcore_Playerbots_Database_${{ steps.ts.outputs.utc }}"
-         name: "Azerothcore_Playerbots_Database_${{ steps.ts.outputs.utc }}"
+         tag: "Database_${{ steps.ts.outputs.utc }}"
+         name: "Database_${{ steps.ts.outputs.utc }}"
          body: |
               ### Azerothcore_Playerbots_Database
          artifacts: "./${{ steps.package.outputs.name }}"
          token: ${{ secrets.BUILD_AZEROTHCORE }}
          replacesArtifacts: true
 
-      - name: 保留最新3个Release
+      - name: 清理旧Release
         uses: dev-drprasad/delete-older-releases@v0.3.4
         with:
            keep_latest: 3
