--- a/.github/workflows/test-win_X64.yml
+++ b/.github/workflows/test-win_X64.yml
@@ -128,8 +128,8 @@ jobs:
       - name: 创建Release并上传
         uses: ncipollo/release-action@v1.14.0
         with:
-          tag: "Azerothcore_playerbots_win_X64_${{ steps.ts.outputs.utc }}"
-          name: "Azerothcore_playerbots_win_X64_${{ steps.ts.outputs.utc }}"
+          tag: "Playerbots_win_X64_${{ steps.ts.outputs.utc }}"
+          name: "Playerbots_win_X64_${{ steps.ts.outputs.utc }}"
           body: |
             ### Azerothcore_playerbots_win_X64
           artifacts: "${{ steps.package.outputs.name }}"
