--- a/.github/workflows/Playerbots-Win_X64.yml
+++ b/.github/workflows/Playerbots-Win_X64.yml
@@ -1,5 +1,5 @@
 
-name: Playerbots-win_X64
+name: Playerbots-Win_X64
 
 on:
   workflow_dispatch:
@@ -11,7 +11,7 @@ on:
       branch:
         description: 'Branch'
         required: true
-        default: 'master'
+        default: 'Playerbot'
       modules:
         description: 'Modules (separated by |)'
         required: false
