--- a/.github/workflows/Build_Database.yml
+++ b/.github/workflows/Build_Database.yml
@@ -9,6 +9,7 @@ jobs:
   Build_Database:
     runs-on: ubuntu-22.04
     env:
+      TZ: Asia/Shanghai
       ROOT_DIR: ./azerothcore
       MODULES_DIR: ./azerothcore/modules
       ACORE_REPO: "https://github.com/liyunfan1223/azerothcore-wotlk.git"
