--- a/.github/workflows/Playerbots-Linux_x64.yml
+++ b/.github/workflows/Playerbots-Linux_x64.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     env:
+      TZ: Asia/Shanghai
       # 路径配置（调整INSTALL_DIR到BUILD_DIR内部）
       ROOT_DIR: ./azerothcore
       BUILD_DIR: ./azerothcore/build
