--- a/.github/workflows/Playerbots-Win_X64.yml
+++ b/.github/workflows/Playerbots-Win_X64.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: windows-2025
     
     env:
+      TZ: Asia/Shanghai
       # 固定配置（不再支持外部输入，所有触发方式均使用这些值）
       AC_REPO: 'liyunfan1223/azerothcore-wotlk'
       AC_BRANCH: 'Playerbot'
